Fixed small gap between header and search on mobile devices

--- a/web/css/layout/_minisearch.less
+++ b/web/css/layout/_minisearch.less
@@ -43,6 +43,7 @@
                 z-index: 40;
                 left: 0;
                 right: 0;
+                margin: 0;
             }
             .actions {
                 display: flex;
